# testmechs

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
docs/: conf.py  index.md
docs/api/: bounds.md  contracts.md  index.md  monte_carlo.md  partial_density.md  preprocess.md  r_python_mapping.md  regression.md  sharp_null.md
docs/autoapi/: modules.md  testmechs.bounds.md  testmechs.contracts.md  testmechs.md  testmechs.monte_carlo.md  testmechs.partial_density.md  testmechs.preprocess.md  testmechs.regression.md  testmechs.results.md  testmechs.sharp_null.md
docs/guides/: interpretation.md
examples/: paper_replication.ipynb  paper_replication_executed.ipynb
src/testmechs/: __init__.py  _json_io.py  bounds.py  contracts.py  empirical.py  monte_carlo.py  parity.py  partial_density.py  preprocess.py  regression.py  reproduction.py  results.py  sharp_null.py
src/testmechs/resources/: __init__.py
src/testmechs/resources/fixtures/: __init__.py  baranov_mother_data.csv  burstzyn_data.csv  kerwin_data.csv
src/testmechs/resources/statistics/: __init__.py  baranov-alt-grandmother-cs-pval.tex  baranov-alt-grandmother-percent-nts-affected.tex  baranov-both-cs-pval.tex  baranov-both-tv-all-percent.tex  baranov-grandmother-cs-pval.tex  baranov-grandmother-min-defiers-ratio.tex  baranov-grandmother-percent-nts-affected.tex  baranov-relationship-at-bounds-all-percent.tex  baranov-relationship-cs-pval.tex  baranov-relationship-diff-cdf-4-pval.tex  baranov-relationship-diff-cdf-4.tex  baranov-sample-size-both.tex  baranov-sample-size-grandmother.tex  burstzyn-ate-restricted-sample.tex  burstzyn-lee-bounds-lb-nts-full-sample.tex  burstzyn-lee-bounds-ub-nts-full-sample.tex  burstzyn-lee-bounds-ub-nts-restricted-sample.tex  burstzyn-min-defier-fraction-restricted-sample.tex  burstzyn-min-defier-percent-full-sample.tex  burstzyn-min-defier-ratio-restricted-sample.tex  burstzyn-percent-nts-affected-full-sample.tex  burstzyn-percent-nts-affected-restricted-sample.tex  burstzyn-percent-wedge-negative.tex  burstzyn-sample-size-treated-wedge-negative.tex  burstzyn-sample-size-wedge-negative.tex
src/testmechs/resources/tables/: __init__.py  appendix_table1.tex  appendix_table2.tex  clustered_cell_count.tex  pvals-table-dif-bins.tex  pvals-table.tex  table1.tex  table2.tex
tests/: test_smoke.py
